# CalculationMethodsLab1

./: CMakeLists.txt  README.md  cholesky.c  def.h  gauss.c  gauss.h  gaussjordan.c  gaussjordan.h  gmres.c  gmres.h  gmresarnoldi.c  lup.c  lup.h  main.c  matrixutils.c  matrixutils.h  minquads.c  mtwister.c  mtwister.h  relaxation.c  relaxation.h
docs/: report.docx  report.txt
